--- a/talk/exercises.tex
+++ b/talk/exercises.tex
@@ -147,7 +147,7 @@ $ ./alpsdemo --count=2
 $ ./alpsdemo --count=2 --verbose
 \end{lstlisting}
 \item Run with large count and small timelimit; time the execution:\\
-\code{\$ time -p ''your\_command''}
+\code{\$ time -p \emph{your\_command}}
 \begin{lstlisting}[emph={time}]
 $ time -p ./alpsdemo --count=10000000 --timelimit=1
 \end{lstlisting}%$
