Minor fixes to text; solutions are moved.

--- a/talk/exercises.tex
+++ b/talk/exercises.tex
@@ -41,6 +41,8 @@
 
 \section{Exercise~1: Download and install\\ the tutorial}
 
+Open a terminal. Then, enter the following commands.
+
 \begin{lstlisting}[language=sh,emph={ls,cd,mkdir,git}]
 $ cd ~
 $ mkdir alpstut
