Last-minute changes in the slides and handouts.

--- a/talk/exercises.tex
+++ b/talk/exercises.tex
@@ -39,6 +39,31 @@
 
 \begin{document}
 
+\section*{Important links}
+\begin{flushleft}
+Tutorial slides: \nolinkurl{https://git.io/alpstut2_slides}
+
+Tutorial repo: \nolinkurl{https://github.com/ALPSCore/Tutorial2}
+
+ALPSCore site: \nolinkurl{http://alpscore.org}
+
+ALPSCore wiki: \nolinkurl{https://github.com/ALPSCore/ALPSCore/wiki}
+
+ALPSCore repo: \nolinkurl{https://github.com/ALPSCore/ALPSCore}
+
+Doxygen docs: \nolinkurl{https://alpscore.ci.cloudbees.com}
+              \nolinkurl{/job/alpscore_fedora17_doc-only/ALPSCore_reference/}
+
+Exercise solutions:
+\begin{itemize}
+\item Online: \nolinkurl{https://git.io/alpstut2_solutions}
+\item Locally: \code{\color{ballblue}\$tutorial/X\_solutions}
+\end{itemize}
+
+\end{flushleft}
+
+\pagebreak
+
 \section*{Exercise~1: Download and install the tutorial}
 
 Open a terminal. Then, enter the following commands.
@@ -264,7 +289,6 @@ Steps:
 \end{enumerate}
 
 
-\pagebreak
 \section*{Appendix: Git cheat-sheet for today}
 \begin{flushleft}
 \textbf{Clone (``download'') repository:}\\
@@ -283,28 +307,8 @@ Example: \\
 \lstinline[style=showspaces]|git reset --hard|
 \end{flushleft}
 
-\section*{Appendix: Important links}
-\begin{flushleft}
-ALPSCore site: \nolinkurl{http://alpscore.org}
-
-ALPSCore wiki: \nolinkurl{https://github.com/ALPSCore/ALPSCore/wiki}
-
-ALPSCore repo: \nolinkurl{https://github.com/ALPSCore/ALPSCore}
-
-Doxygen docs: \nolinkurl{https://alpscore.ci.cloudbees.com}
-              \nolinkurl{/job/alpscore_fedora17_doc-only/ALPSCore_reference/}
-
-Tutorial repo: \nolinkurl{https://github.com/ALPSCore/Tutorial2}
-
-Exercise solutions:
-\begin{itemize}
-\item Online: \nolinkurl{https://git.io/alpstut2_solutions}
-\item Locally: \code{\color{ballblue}\$tutorial/X\_solutions}
-\end{itemize}
-
-\end{flushleft}
-
 \pagebreak
+
 \section*{Appendix: ALPSCore CMake and environment variables}
 \label{ref:cmakevars}%
 CMake variables: set as \code{cmake
