Updated with Wiki URL

--- a/talk/exercises.tex
+++ b/talk/exercises.tex
@@ -41,9 +41,13 @@
 
 \section*{Important links}
 \begin{flushleft}
-Tutorial slides: \nolinkurl{https://git.io/alpstut2_slides}
+%Tutorial slides: \nolinkurl{https://git.io/alpstut2_slides}
 
-Tutorial repo: \nolinkurl{https://github.com/ALPSCore/Tutorial2}
+%Tutorial repo: \nolinkurl{https://github.com/ALPSCore/Tutorial2}
+
+Tutorial Wiki: \nolinkurl{https://github.com/galexv/ALPSCore_Tutorial2/wiki}
+
+
 
 ALPSCore site: \nolinkurl{http://alpscore.org}
 
